# chatbot-agent

./: .gitignore  Dockerfile  README.md  nixpacks.toml  prd.md  serve.py
.github/workflows/: ci.yml
backend/: .env.example  README.md  init_data.py  main.py  openapi.yaml  pyproject.toml  serve.py
backend/api/: tools.py
backend/core/: config.py  db.py  errors.py  logging.py  metrics.py  rate_limit.py
backend/memory/: models.py  store.py
backend/planner/: base.py  simple.py  types.py
backend/tools/: __init__.py  base.py  calculator.py  outlets.py  products.py  router.py
db/: conversations.db  outlets.db
db/faiss/: products.index  products_metadata.json
db/raw/: outlets.json  products.json
docs/: api_spec.json  error_handling_security.md  planner_decisions.md
docs/diagrams/: planner-sequence.mmd  system-architecture.mmd
docs/flows/: part1_sequential_conversation.json
docs/samples/: README.md  outlets.sample.json  products.sample.json
docs/transcripts/: calculator_failure.md  outlets_failure.md  outlets_success.md  outlets_unhappy.md  products_failure.md  products_success.md  products_unhappy.md  reset_flow.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.module.css  App.tsx  index.css
scripts/: README.md  enrich_outlets_details.py  enrich_outlets_geo.py  export_diagrams.sh  export_openapi.py  ingest_products.py  requirements.txt  run_ci.sh  scrape_zus_drinkware.py  scrape_zus_outlets.py  sync_outlets.py
tests/: README.md  conftest.py
tests/unit/: conftest.py  (+2 more)
(+17 files in other folders)
